# EasyWebServer

./: CMakeLists.txt  ServerBase.cpp  ServerBase.h++  ServerBase.hpp  handler.hpp  main.cpp  main_http.cpp  server_base.hpp  server_http.hpp
www/: index.html
